--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -35,6 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  mobile_scanner: ^6.0.10
+  preety_qr_code: ^3.0.0
+  qr_flutter: ^5.0.0
+  provider: ^6.1.5
+  shared_preferences: ^2.1.0
+  url_launcher: ^6.1.10
+  webview_flutter: ^4.0.7
+  webview_flutter_platform_interface: ^4.0.7
+  webview_flutter_wkwebview: ^4.0.7
+  
 
 dev_dependencies:
   flutter_test:
