--- a/my_app/android/app/src/main/AndroidManifest.xml
+++ b/my_app/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" android:required="true"/>
+
+    
     <application
+         android:requestLegacyExternalStorage="true"
+        android:usesCleartextTraffic="true"
+        android:allowBackup="true"
         android:label="my_app"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:enableOnBackInvokedCallback="true" >
+
+    
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
