--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -36,14 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   mobile_scanner: ^6.0.10
-  preety_qr_code: ^3.0.0
-  qr_flutter: ^5.0.0
-  provider: ^6.1.5
-  shared_preferences: ^2.1.0
-  url_launcher: ^6.1.10
-  webview_flutter: ^4.0.7
-  webview_flutter_platform_interface: ^4.0.7
-  webview_flutter_wkwebview: ^4.0.7
+  camera: ^0.11.0+2
+  permission_handler: ^11.2.0
+  google_mlkit_barcode_scanning: ^0.14.0
+  google_mlkit_commons: ^0.10.0
+
+
+  
+  
   
 
 dev_dependencies:
@@ -69,10 +69,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/logo.png
+    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
